@startuml

title __ENTITY's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.Project {
          - projectColor : int
          - projectId : long
          - projectName : String
          + Project()
          + equals()
          + getProjectColor()
          + getProjectId()
          + getProjectName()
          + setProjectId()
          + toString()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.RelationTaskWithProject {
          + equals()
          + getProject()
          + getTask()
          + setProject()
          + setTask()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskAZComparator {
          + compare()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskOldComparator {
          + compare()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskRecentComparator {
          + compare()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskZAComparator {
          + compare()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model.entity {
      class com.cleanup.todoc.model.entity.Task {
          - creationTimestamp : long
          - projectId : long
          - taskId : long
          - taskName : String
          + Task()
          + equals()
          + getCreationTimestamp()
          + getProjectId()
          + getTaskId()
          + getTaskName()
          + hashCode()
          + setTaskId()
          - setCreationTimestamp()
          - setProjectId()
          - setTaskName()
      }
    }
  }
  

  com.cleanup.todoc.model.entity.RelationTaskWithProject o-- com.cleanup.todoc.model.entity.Project : mProject
  com.cleanup.todoc.model.entity.RelationTaskWithProject o-- com.cleanup.todoc.model.entity.Task : mTask
  com.cleanup.todoc.model.entity.RelationTaskWithProject +-down- com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskAZComparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject +-down- com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskOldComparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject +-down- com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskRecentComparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject +-down- com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskZAComparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskAZComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskOldComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskRecentComparator .up.|> java.util.Comparator
  com.cleanup.todoc.model.entity.RelationTaskWithProject.TaskZAComparator .up.|> java.util.Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
